changing font-size to prevent overflow

--- a/prac.css
+++ b/prac.css
@@ -36,7 +36,7 @@ header{
 .logo h1{
     display: inline-block;
     position: absolute;
-    font-size: 1.5em;
+    font-size: 1em;
     font-style: normal;
     font-family: 'Montserrat', sans-serif;
     color: var(--logo-color);
